Swagger fix
